--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <div class="password-container">
             <input type="text" class="password-input" id="passwordInput" placeholder="Hint: A girl with dark hair and golden smile">
             <button class="submit-btn" id="submitBtn">Submit</button>
-            <p class="error-message" id="errorMsg">Humm, you really don't know?</p>
+            <p class="error-message" id="errorMsg">Humm, you really don't know? maybe it starts with 'S' and ends with 'e'</p>
         </div>
     </div>
     
