add instagram ignore feature

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 告诉爬虫不要显示预览 -->
+    <meta name="robots" content="noimageindex, noindex, nofollow, nosnippet">
+    <!-- 专门针对 Facebook/Instagram 爬虫 -->
+    <meta property="og:image" content="">
+    <meta property="og:title" content=" ">
+    <meta property="og:description" content=" ">
     <title>Birthday Gift</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand:wght@400;600&family=Pattaya:wght@300;400&display=swap" rel="stylesheet">
     <style>
